# super-shell-rs

./: .releaserc  .releaserc.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: pipe.yaml
src/: lib.rs
