[package]
name = "super-shell"
authors = ["Rouven Himmelstein <rouven@himmelstein.info>"]
license = "GPL-3.0"
version = "0.0.0" # will be replaced by the github action build script
edition = "2021"
description = "This library povides basic super user shell access in rust."
readme = "README.md"
homepage = "https://github.com/RouHim/super-shell-rs"
repository = "https://github.com/RouHim/super-shell-rs"
keywords = ["shell", "super user", "root", "sudo", "su"]
categories = ["system", "shell"]

[dependencies]
